--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,48 @@
 {
   "compilerOptions": {
+    // 指定编译目标为ES2017
     "target": "ES2017",
+    // 引入的库文件，包括DOM、DOM可迭代对象和ESNext
     "lib": ["dom", "dom.iterable", "esnext"],
+    // 允许编译JavaScript文件
     "allowJs": true,
+    // 跳过类型检查
     "skipLibCheck": true,
+    // 启用严格类型检查
     "strict": true,
+    // 不生成输出文件
     "noEmit": true,
+    // 允许在模块导入时使用CommonJS模块语法
     "esModuleInterop": true,
+    // 使用ESNext模块系统
     "module": "esnext",
+    // 使用bundler模块解析策略
     "moduleResolution": "bundler",
+    // 允许解析JSON模块
     "resolveJsonModule": true,
+    // 将每个文件视为独立的模块
     "isolatedModules": true,
+    // 保留JSX语法
     "jsx": "preserve",
+    // 启用增量编译
     "incremental": true,
+    // 使用Next.js插件
     "plugins": [
       {
         "name": "next"
       }
     ],
+    // 路径别名配置
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    // 强制文件名大小写一致
+    "forceConsistentCasingInFileNames": true,
+    // 禁止在switch语句中出现贯穿的情况
+    "noFallthroughCasesInSwitch": true,
   },
+  // 包含的文件类型
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  // 排除的文件类型
+  "exclude": ["node_modules"],
 }
