--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "prisma generate --accelerate"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.1",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@prisma/client": "^6.3.0",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "db": "file:src/generated/client",
     "lucide-react": "^0.474.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
@@ -30,7 +33,7 @@
     "eslint-config-next": "15.1.3",
     "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
-    "prisma": "^6.2.1",
+    "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
