--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
         "type": "node",
         "request": "launch",
         "program": "${workspaceFolder}/node_modules/.bin/next",
-        "runtimeArgs": ["--inspect"],
+        "runtimeArgs": ["--inspect=9230"],
         "skipFiles": ["<node_internals>/**"],
         "serverReadyAction": {
           // "action": "debugWithEdge",
