--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8",
     "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
+    "tinymce": "^7.8.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
