--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.10",
+    "@shuchaoxxx/csc-utils": "^1.0.3",
     "@tinymce/tinymce-react": "^6.1.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
@@ -54,6 +55,7 @@
     "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
     "prisma": "^6.3.0",
+    "sass": "^1.87.0",
     "tailwindcss": "^3.4.1",
     "tinymce": "^7.8.0",
     "tsx": "^4.19.2",
