--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.3.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.10",
@@ -32,6 +34,7 @@
     "clsx": "^2.1.1",
     "db": "file:src/generated/client",
     "lucide-react": "^0.474.0",
+    "markdown-it": "^14.1.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
@@ -42,11 +45,13 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.17.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
