优化文章展示界面

--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@radix-ui/react-toast": "^1.2.10",
     "@shuchaoxxx/csc-utils": "^1.0.3",
     "@tinymce/tinymce-react": "^6.1.0",
+    "@types/highlight.js": "^9.12.4",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "db": "file:src/generated/client",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.474.0",
     "markdown-it": "^14.1.0",
     "next": "15.1.3",
