--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@shuchaoxxx/csc-utils": "^1.0.3",
     "@tinymce/tinymce-react": "^6.1.0",
     "@types/highlight.js": "^9.12.4",
+    "@types/markdown-it-anchor": "^4.0.4",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +38,16 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.474.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-abbr": "^2.0.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-deflist": "^3.0.0",
+    "markdown-it-emoji": "^3.0.0",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-mark": "^4.0.0",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
+    "markdown-it-task-checkbox": "^1.0.6",
+    "markdown-it-toc-done-right": "^4.2.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
@@ -54,6 +65,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-emoji": "^3.0.1",
     "@types/node": "^20.17.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
