--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
     // 指定编译目标为ES2017
     "target": "ES2017",
     // 引入的库文件，包括DOM、DOM可迭代对象和ESNext
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     // 允许编译JavaScript文件
     "allowJs": true,
     // 跳过类型检查
@@ -34,17 +38,29 @@
     ],
     // 路径别名配置
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": [
+        "./src/*"
+      ],
       // 项目跟路径
-      "@@/*": ["./"],
+      "@@/*": [
+        "./"
+      ]
     },
     // 强制文件名大小写一致
     "forceConsistentCasingInFileNames": true,
     // 禁止在switch语句中出现贯穿的情况
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
   },
   // 包含的文件类型
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "next-env.d.ts",
+    "./out/types/**/*.ts"
+  ],
   // 排除的文件类型
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ]
 }
