--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,12 +26,14 @@
     //       }
     //     ]
     //   },
+    //  添加端口号
       {
         "name": "Next.js: debug full stack",
         "type": "node",
         "request": "launch",
         "program": "${workspaceFolder}/node_modules/.bin/next",
         "runtimeArgs": ["--inspect=9230"],
+        "args": ["-p", "4000"], // 新增端口参数
         "skipFiles": ["<node_internals>/**"],
         "serverReadyAction": {
           // "action": "debugWithEdge",
@@ -39,8 +41,8 @@
           "killOnServerStop": true,
           "pattern": "- Local:.+(https?://.+)",
           "uriFormat": "%s",
-          "webRoot": "${workspaceFolder}"
-        }
+          "webRoot": "${workspaceFolder}",
+        },
       }
     ]
   }
