--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "db": "file:src/generated/client",
+    "gsap": "^3.13.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.474.0",
     "markdown-it": "^14.1.0",
@@ -51,6 +52,7 @@
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.177.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
@@ -63,6 +65,7 @@
     "@types/node": "^20.17.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.177.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "next-transpile-modules": "^10.0.1",
