--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev --turbopack -p 4000",
+    "dev": "NODE_OPTIONS='--inspect' next dev --turbopack -p 3000",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -27,6 +27,7 @@
     "@radix-ui/react-toast": "^1.2.10",
     "@types/highlight.js": "^9.12.4",
     "@types/markdown-it-anchor": "^4.0.4",
+    "ahooks": "^3.9.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
