--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "markdown-it-task-checkbox": "^1.0.6",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
+    "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
