--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "db": "file:src/generated/client",
+    "echarts": "^6.0.0",
     "gsap": "^3.13.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.474.0",
