--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "numeral": "^2.0.6",
+    "ramda": "^0.31.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-use": "^17.6.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.177.0",
@@ -66,6 +68,7 @@
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-emoji": "^3.0.1",
     "@types/node": "^20.17.16",
+    "@types/ramda": "^0.31.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.177.0",
